* RAS-63: Implemented 2 step sign-up process